<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tambah_akun_baru"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="24dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:boxStrokeColor="@color/primary"
            app:hintTextColor="@color/primary" >

            <EditText
                android:id="@+id/input_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Title"
                android:hint="@string/judul_contoh_facebook_gmail"
                android:inputType="text"
                tools:ignore="VisualLintTextFieldSize" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:boxStrokeColor="@color/primary"
            app:hintTextColor="@color/primary" >

            <EditText
                android:id="@+id/input_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Username"
                android:hint="@string/username_email"
                android:inputType="textEmailAddress"
                tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:passwordToggleEnabled="true"
            app:boxStrokeColor="@color/primary"
            app:hintTextColor="@color/primary" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Password"
                android:hint="@string/password"
                android:inputType="textPassword"
                tools:ignore="VisualLintTextFieldSize" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            app:boxStrokeColor="@color/primary"
            app:hintTextColor="@color/primary" >

            <EditText
                android:id="@+id/input_website"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Website"
                android:hint="@string/website_opsional"
                android:inputType="textUri"
                tools:ignore="VisualLintTextFieldSize" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_cancel"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:text="@string/batal"
                tools:ignore="TextContrastCheck,VisualLintButtonSize" />

            <Button
                android:id="@+id/btn_save"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text="@string/simpan"
                tools:ignore="ButtonStyle,TextContrastCheck,VisualLintButtonSize" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>